static/ninngenn-te-iiinaaa.css
body{font:100% arial;background:#fff}
a{color:#08d;text-decoration:none}a:hover{text-decoration:underline}
button{cursor:pointer}
input[type="text"]{border:1px solid #ccc;padding:3px 2px}
.wrap,.wrap-nopad{width:600px}
.wrap{padding:20px 25px}
#main-wrap{background:#eee;;border:1px solid #ccc}

.border-radius{border-radius:3px;-moz-border-radius:3px}
.align-left{text-align:left}.align-center{text-align:center}.align-right{text-align:right}
.center{margin:0 auto}
.left{float:left}.right{float:right}
b,.bold{font-weight:700}
.grey{color:#777}.black{color:#000}
.small{font-size:11px}.medium{font-size:15px}.large{font-size:21px}.x-large{font-size:31px}
.upper{text-transform:uppercase}
.clear{clear:both;display:block;overflow:hidden;visibility:hidden;width:0;height:0}
.pointer{cursor:pointer}
.button{padding:6px 10px}

#header{padding:10px 20px}
#logo{font-size:21px;font-family:'Delius Swash Caps'}
#nav{padding-top:6px}

#sketch-pad-wrap{width:500px;margin-top:15px}
#sketch-pad{cursor:crosshair;border:1px solid #ccc;}

#sketch-options{margin:10px 0}

.color-wrap{padding:2px;margin-right:3px}
.color-wrap:hover{background:#777}
.color{width:18px;height:18px;}

#size-slider-wrap{width:55%}
#size-slider{width:60%;margin-left:15px}

#options{margin-top:15px}

#metadata{padding-bottom:10px}
#image-list .li-lol{margin-bottom:15px;width:200px}
#image-list img{margin-top:6px}

#time-up-play-again{margin:15px 0;}
#save-doodle{margin:20px 10px 10px;padding:10px;background:#eee;border:1px solid #ccc}
#post-img-name{width:60%}

